# PeakAnalyzer_scripts

./: Cargo.toml  Dockerfile  README  deploy.py  prompt.md  pyproject.toml  quick_deploy.bat  uv.toml
python/: README.md  app.py  main.py  requirements.txt
python/cache/: __init__.py  cache_manager.py  curve_cache.py
python/core/: __init__.py  curve.py  curve_adapter.py  curve_wrapper.py  data_processor.py  rust_bridge.py  state_manager.py  state_sync.py
python/export/: __init__.py  report_generator.py
python/pages/: 01_📂_数据提取.py  02_🔧_曲线处理.py  03_📊_结果可视化.py
python/peak_analysis/: __init__.py  peak_analyzer.py  peak_analyzer_clean.py  peak_detector.py  peak_fitter.py
python/ui/: __init__.py  app.py  sidebar.py
python/ui/pages/: __init__.py  curve_processing_page.py  data_extraction_page.py  visualization_page.py
python/ui/pages/processing/: __init__.py  baseline_correction.py  peak_analysis.py  peak_detection.py  peak_fitting.py  smoothing.py
python/utils/: __init__.py  file_dialog.py  file_handler.py
src/: curve.rs  curve_extractor.rs  data_loader.rs  errors.rs  lib.rs  mod.rs
