[package]
name = "peakanalyzer-scripts"
version = "0.1.0"
edition = "2021"
authors = ["PeakAnalyzer Development Team"]
description = "High-performance mass spectrometry data processing backend"
license = "MIT"
repository = "https://github.com/your-org/peakanalyzer-scripts"
keywords = ["mass-spectrometry", "mzdata", "peak-analysis", "python-extension"]
categories = ["science", "api-bindings"]

[lib]
name = "peakanalyzer_scripts"
crate-type = ["cdylib"]

# 性能优化配置（基于Red Hat建议）
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1  # 开发时的适度优化

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
mzdata = { version = "0.59.1", features = ["thermo", "mzml", "mgf"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
uuid = { version = "1.18.1", features = ["v4"] }
async-trait = "0.1.89"
